// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-sass Stage: build-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: build-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: build-html / Sass options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: build-javascript / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: build-javascript / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: build-javascript / Sass options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: develop / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: develop / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: develop / Sass options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: develop-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: develop-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-sass Stage: develop-html / Sass options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":1})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/sass-loader",
                      "options": Object {
                        "includePaths": Array [
                          "absolute/path/a",
                          "absolute/path/b",
                        ],
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;
